--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li class="has-children">
-                  <a href="services.html">Services</a>
+                  <a href="/service/">Services</a>
                   <ul class="dropdown">
                     <li><a href="#">Air Freight</a></li>
                     <li><a href="#">Ocean Freight</a></li>
