Added files and changes required for deployment to heroku

--- a/templates/base.html
+++ b/templates/base.html
@@ -151,8 +151,8 @@
             <div class="unit-4 d-flex">
               <div class="unit-4-icon mr-4"><span class="text-primary flaticon-travel"></span></div>
               <div>
-                <h3>Air Freight</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
+                <h3>Local and cross boarder transportation</h3>
+                <p>We offer a complete range of inland transportation services from Dar Es Salaam-Tanzania, Beira-Mozambique, Durban-South Africa and Wayvis Bay-Namibia to land locked countries like Zambia, DR Congo and Malawi. This includes full and partial truckload transportation.</p>
                 <p class="mb-0"><a href="#">Learn More</a></p>
               </div>
             </div>
@@ -161,7 +161,7 @@
             <div class="unit-4 d-flex">
               <div class="unit-4-icon mr-4"><span class="text-primary flaticon-sea-ship-with-containers"></span></div>
               <div>
-                <h3>Ocean Freight</h3>
+                <h3>Customs Clearance (import and Exports)</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
                 <p class="mb-0"><a href="#">Learn More</a></p>
               </div>
