added gunicorn (app server) with requirements.txt and Procfile 3

--- a/templates/about.html
+++ b/templates/about.html
@@ -262,7 +262,7 @@
           <div>
             <div class="testimonial">
               <figure class="mb-4">
-                <img src="images/person_3.jpg" alt="Image" class="img-fluid mb-3">
+                <img src="{% static 'images/person_3.jpg' %} " alt="Image" class="img-fluid mb-3">
                 <p>John Smith</p>
               </figure>
               <blockquote>
@@ -273,7 +273,7 @@
           <div>
             <div class="testimonial">
               <figure class="mb-4">
-                <img src="images/person_2.jpg" alt="Image" class="img-fluid mb-3">
+                <img src="{% static 'images/person_2.jpg' %} " alt="Image" class="img-fluid mb-3">
                 <p>Christine Aguilar</p>
               </figure>
               <blockquote>
@@ -285,7 +285,7 @@
           <div>
             <div class="testimonial">
               <figure class="mb-4">
-                <img src="images/person_4.jpg" alt="Image" class="img-fluid mb-3">
+                <img src="{% static 'images/person_4.jpg' %}" alt="Image" class="img-fluid mb-3">
                 <p>Robert Spears</p>
               </figure>
               <blockquote>
@@ -297,7 +297,7 @@
           <div>
             <div class="testimonial">
               <figure class="mb-4">
-                <img src="images/person_5.jpg" alt="Image" class="img-fluid mb-3">
+                <img src="{% static 'images/person_5.jpg' %} " alt="Image" class="img-fluid mb-3">
                 <p>Bruce Rogers</p>
               </figure>
               <blockquote>
@@ -381,19 +381,19 @@
     </footer>
   </div>
 
-  <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/jquery-migrate-3.0.1.min.js"></script>
-  <script src="js/jquery-ui.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/jquery.stellar.min.js"></script>
-  <script src="js/jquery.countdown.min.js"></script>
-  <script src="js/jquery.magnific-popup.min.js"></script>
-  <script src="js/bootstrap-datepicker.min.js"></script>
-  <script src="js/aos.js"></script>
+  <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+  <script src="{% static 'js/jquery-migrate-3.0.1.min.js' %}"></script>
+  <script src="{% static 'js/jquery-ui.js' %}"></script>
+  <script src="{% static 'js/popper.min.js' %}"></script>
+  <script src="{% static 'js/bootstrap.min.js' %}"></script>
+  <script src="{% static 'js/owl.carousel.min.js' %}"></script>
+  <script src="{% static 'js/jquery.stellar.min.js' %}"></script>
+  <script src="{% static 'js/jquery.countdown.min.js' %}"></script>
+  <script src="{% static 'js/jquery.magnific-popup.min.js' %}"></script>
+  <script src="{% static 'js/bootstrap-datepicker.min.js' %}"></script>
+  <script src="{% static 'js/aos.js' %}"></script>
 
-  <script src="js/main.js"></script>
+  <script src="{% static 'js/main.js' %}"></script>
 
   </body>
 </html>
